<resources>
    <string name="app_name">DelveGM</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="feature_rule_sets_activity_title">Rule Sets</string>
    <string name="feature_rule_sets_activity_description">Manage the different Rulesets for your table top games</string>
    <string name="feature_game_worlds_activity_title">Game Worlds</string>
    <string name="feature_game_worlds_activity_description">Create and edit the different worlds for your games</string>
    <string name="feature_weather_activity_title">Weather</string>
    <string name="feature_weather_activity_description">Create and edit the weather effects for your games</string>
    <string name="feature_time_and_events_activity_title">Time &amp; Events</string>
    <string name="feature_time_and_events_activity_description">Create, and edit Game World Calendars, clocks, and events</string>
    <string name="feature_campaigns_activity_title">Campaigns</string>
    <string name="feature_campaigns_activity_description">Create and edit your tabletop campaign settings</string>
    <string name="feature_adventures_activity_title">Adventures</string>
    <string name="feature_adventures_activity_description">Create and edit your tabletop adventures</string>
    <string name="features_menu_header">Game Master Tools</string>
    <string name="feature_image_description">Feature image</string>
    <string name="menu_option_title_settings">Settings</string>
    <string name="menu_option_title_change_campaign">Change Campaign</string>
    <string name="menu_option_title_export_data">Export Data</string>
    <string name="menu_option_title_import_data">Import Data</string>
    <string name="menu_option_title_help">Help</string>
    <string name="quick_action_button_roll_dice">Roll Dice</string>
    <string name="quick_action_button_start_combat">Start Combat</string>
    <string name="quick_action_button_notes">Notes</string>
</resources>