<?xml version="1.0" encoding="utf-8"?>
<!-- menu/top_app_bar_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/change_campaign"
        android:title="@string/menu_option_title_change_campaign"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_option_title_settings"
        android:contentDescription="@string/menu_option_title_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/export_data"
        android:title="@string/menu_option_title_export_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/import_data"
        android:title="@string/menu_option_title_import_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:title="@string/menu_option_title_help"
        app:showAsAction="never" />
</menu>